hphp/test/zend/bad/tests/security/open_basedir_is_link.php
<?php
require_once "open_basedir.inc";
test_open_basedir("is_link");
?>
<?php error_reporting(0); ?>
<?php
require_once "open_basedir.inc";
delete_directories();
?>